--- a/Image Encryption AES/Image Encryption AES.vcxproj.filters
+++ b/Image Encryption AES/Image Encryption AES.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="AESProject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AESFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AESFunctions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
