--- a/Image Encryption AES/Image Encryption AES.vcxproj.filters
+++ b/Image Encryption AES/Image Encryption AES.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="testencrypt.txt" />
+  </ItemGroup>
 </Project>
